chandeliers-lus/tests/warn/dead_code/hidden-main.stderr
error: method `step` is never used
 --> tests/warn/dead_code/hidden-main.rs:6:14
  |
6 |         node foo() returns ();
  |              ^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/hidden-main.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^

error: function `main` is never used
 --> tests/warn/dead_code/hidden-main.rs:6:14
  |
6 |         node foo() returns ();
  |              ^^^
