chandeliers-lus/tests/warn/dead_code/hidden-main.rs
#![deny(dead_code)]

mod hidden {
    chandeliers_lus::decl! {
        #[main]
        node foo() returns ();
        let tel;
    }
}

fn main() {}
